Make lein use provided java policy